Fixed issue with open hours not showing as intended Made text on weekend and holidays to match other text

--- a/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
+++ b/wp-content/themes/municipio-nsr/assets/source/sass/layout/_misc.scss
@@ -166,7 +166,7 @@ li.before {
 .weekender {
   color: alpha-color($palette-primary-grey, 50%, $type: 'dark');
   font-style: italic;
-  font-size: .9rem !important;
+  font-size: 1em !important;
 }
 
 .weekender.allsections {
